@@ -9,7 +9,6 @@ import com.example.spending.dto.user.UserResponseDto;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -38,9 +37,7 @@ public class UserService implements ICRUDService<UserRequestDto, UserResponseDto
   public List<UserResponseDto> getAll() {
     List<User> users = userRepository.findAll();
 
-    return users.stream()
-        .map(user -> mapper.map(user, UserResponseDto.class))
-        .collect(Collectors.toList());
+    return users.stream().map(user -> mapper.map(user, UserResponseDto.class)).toList();
   }
 
   /**
@@ -91,11 +88,11 @@ public class UserService implements ICRUDService<UserRequestDto, UserResponseDto
   /**
    * Updates a user with the provided ID.
    *
-   * @param id  The ID of the user to update.
+   * @param id The ID of the user to update.
    * @param dto The UserRequestDto object containing the updated user details.
    * @return The UserResponseDto object for the updated user.
    * @throws ResourceBadRequestException if the user is inactivated and cannot be updated.
-   * @throws ResourceNotFoundException   if no user is found with the given ID.
+   * @throws ResourceNotFoundException if no user is found with the given ID.
    */
   @Override
   public UserResponseDto update(Long id, UserRequestDto dto) {
@@ -142,7 +139,7 @@ public class UserService implements ICRUDService<UserRequestDto, UserResponseDto
    *
    * @param dto The UserRequestDto object to validate.
    * @throws ResourceBadRequestException if the email or password is null in the UserRequestDto
-   *                                     object.
+   *     object.
    */
   private void validateUser(UserRequestDto dto) {
     if (dto.getEmail() == null || dto.getPassword() == null) {
